@@ -544,7 +544,6 @@ else:
     e = os.path.join('#src', 'engine')
     manifest_in = File(os.path.join(e, 'MANIFEST.in')).rstr()
     sources = [x[:-1] for x in open(manifest_in).readlines()]
-    sources = [x for x in sources if x.find('Optik') == -1]
     sources = [x for x in sources if x.find('Platform') == -1]
     sources = [x for x in sources if x.find('Tool') == -1]
     # XXX
