@@ -1,5 +1,0 @@
-*,D
-*.pyc
-.*.swp
-.consign
-.sconsign
